[gd_scene load_steps=3 format=3 uid="uid://chgbuw5uonyce"]

[ext_resource type="PackedScene" uid="uid://bex6fkbe7be2m" path="res://scenes/path_select.tscn" id="1"]
[ext_resource type="Script" path="res://scripts/settings_editor.gd" id="2"]

[node name="settings_editor" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2")

[node name="buttons" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="close" type="Button" parent="buttons"]
layout_mode = 2
text = "âœ–"

[node name="settings_container" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="library_path" parent="settings_container" instance=ExtResource("1")]
layout_mode = 2
setting_name = "library_path"
setting_description = "Path to dingsda document library."

[connection signal="pressed" from="buttons/close" to="." method="_on_close_pressed"]
[connection signal="path_changed" from="settings_container/library_path" to="." method="_on_library_path_path_changed"]
